# EchoJournal

./: README.md
echojournal/: .gitignore  README.md  package-lock.json  package.json
echojournal/app/: globals.css  page.tsx
echojournal/components/: CommandBar.tsx  Oracle.tsx  ProfileSettings.tsx  RecentEchoes.tsx  Timeline.tsx  TimelineExplorer.tsx
echojournal/hooks/: useSettings.ts
echojournal/lib/: settings.ts
echojournal/src-tauri/: 2  Cargo.toml  tauri.conf.json
echojournal/src-tauri/capabilities/: default.json
echojournal/src-tauri/icons/: icon.icns
echojournal/src-tauri/src/: export.rs  lib.rs  oracle_engine.rs  tags.rs  vector_engine.rs  vector_store.rs
