[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
chrono = "0.4.44"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
genpdf = "0.2.0"
docx-rs = "0.4.19"
tauri-plugin-dialog = "2.0.0"

# 1. Let fastembed handle the heavy lifting. 
# The 'ort-download-binaries' feature is the "magic button" here.
fastembed = { version = "4.2.0", features = ["ort-download-binaries"] }

# 2. REMOVE the manual 'ort' dependency entirely.
# If you need 'ort' types in your code, you can access them via 'fastembed::ort'.

# 3. Rest of your local-first stack
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }

notify = "6.1.1"

llama-cpp-2 = "0.1.11"
encoding_rs = "0.8"
